sfdx_project/force-app/main/default/objects/Account/fields/test_number__c.field-meta.xml
<CustomField>
    <fullName>test_number__c</fullName>
    <label>test number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>