sfdx_project/force-app/main/default/objects/Account/fields/test_text_field__c.field-meta.xml
<CustomField>
    <fullName>test_text_field__c</fullName>
    <label>test text field</label>
    <length>88</length>
    <type>Text</type>
</CustomField>